--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
-current_version = 4.3.1
+current_version = 4.3.p
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<releaselevel>[a-z\d]+)?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{releaselevel}
 	{major}.{minor}.{patch}
 
